--- a/languages/cleverpush-de_DE.po
+++ b/languages/cleverpush-de_DE.po
@@ -1,30 +1,69 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2017-01-21 17:04+0100\n"
-"PO-Revision-Date: 2017-01-21 17:05+0100\n"
+"POT-Creation-Date: 2019-04-24 18:29+0000\n"
+"PO-Revision-Date: 2019-04-24 18:30+0000\n"
 "Last-Translator: \n"
-"Language-Team: \n"
-"Language: de\n"
+"Language-Team: Deutsch\n"
+"Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Loco https://localise.biz/\n"
 "X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-SearchPath-0: .\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Loco-Version: 2.2.2; wp-5.1.1"
 
-#: cleverpush.php:61
+#: cleverpush.php:68
+msgid "CleverPush is almost ready."
+msgstr "CleverPush ist fast einsatzbereit."
+
+#: cleverpush.php:68
+#, php-format
+msgid "You have to select a channel in the %s to get started."
+msgstr "Du musst zuerst einen Kanal in den %s auswählen, um loszulegen."
+
+#: cleverpush.php:68
+msgid "settings"
+msgstr "Einstellungen"
+
+#: cleverpush.php:146
 msgid "Send push notification"
 msgstr "Push Benachrichtigung senden"
 
-#: cleverpush.php:133
+#: cleverpush.php:151
+msgid "Custom headline"
+msgstr "Eigene Headline"
+
+#: cleverpush.php:156
+msgid "Custom text"
+msgstr "Eigener Text"
+
+#: cleverpush.php:164
+msgid "Topic"
+msgstr "Themenbereich"
+
+#: cleverpush.php:167 cleverpush.php:189
+msgid "All subscriptions"
+msgstr "Alle Abonnements"
+
+#: cleverpush.php:186
+msgid "Segment"
+msgstr "Segment"
+
+#: cleverpush.php:221 cleverpush.php:384
+msgid "Please enter your API keys first"
+msgstr "Bitte gib zuerst deine API-Keys ein"
+
+#: cleverpush.php:286
 msgid "The push notification for this post has been successfully sent."
 msgstr ""
 "Die Push Benachrichtigung für diesen Beitrag wurde erfolgreich versendet."
 
-#: cleverpush.php:216
+#: cleverpush.php:354
 #, php-format
 msgid ""
 "You need to have a %s account with an already set up channel to use this "
@@ -33,60 +72,49 @@ msgstr ""
 "Du brauchst einen %s Account mit einem bereits eingerichteten Kanal, um "
 "dieses Plugin zu benutzen. Bitte wählen Sie den Kanal anschließend unten aus."
 
-#: cleverpush.php:217
+#: cleverpush.php:355
 #, php-format
 msgid "The API keys can be found in the %s."
 msgstr "Die API-Keys können in den %s gefunden werden."
 
-#: cleverpush.php:217
+#: cleverpush.php:355
 msgid "API settings"
 msgstr "API Einstellungen"
 
-#: cleverpush.php:224
+#: cleverpush.php:362
 msgid "Select Channel"
 msgstr "Kanal auswählen"
 
-#: cleverpush.php:242
+#: cleverpush.php:380
 msgid "No channels available"
 msgstr "Keine Kanäle verfügbar"
 
-#: cleverpush.php:246
-msgid "Please enter your API keys first"
-msgstr "Bitte gib zuerst deine API-Keys ein"
-
-#: cleverpush.php:251
+#: cleverpush.php:389
 msgid "Public API-Key"
 msgstr "Öffentlicher API-Key"
 
-#: cleverpush.php:256
+#: cleverpush.php:394
 msgid "Private API-Key"
 msgstr "Privater API-Key"
 
-#: cleverpush.php:263
+#: cleverpush.php:402
 msgid "Save Changes"
 msgstr "Änderungen speichern"
 
-#: cleverpush.php:286
-msgid "CleverPush is almost ready."
-msgstr "CleverPush ist fast einsatzbereit."
+#. Name of the plugin
+#. Author of the plugin
+msgid "CleverPush"
+msgstr "CleverPush"
 
-#: cleverpush.php:286
-#, php-format
-msgid "You have to select a channel in the %s to get started."
-msgstr "Du musst zuerst einen Kanal in den %s auswählen, um loszulegen."
+#. Description of the plugin
+msgid ""
+"Send push notifications to your users right through your website. Visit <a "
+"href=\"https://cleverpush.com\">CleverPush</a> for more details."
+msgstr ""
+"Senden Sie Push Benachrichtigungen direkt über Ihre Webseite. Besuchen Sie "
+"<a href=\"https://cleverpush.com\">CleverPush</a> für mehr Infos."
 
-#: cleverpush.php:286
-msgid "settings"
-msgstr "Einstellungen"
-
-#~ msgid "The API keys can be found in the API settings."
-#~ msgstr "Die API-Keys können in den API Einstellungen gefunden werden."
-
-#~ msgid "You have to enter your API keys in the %s to get started."
-#~ msgstr "Du musst deine API-Keys in den %s eingeben, um loszulegen."
-
-#~ msgid "CleverPush subdomain"
-#~ msgstr "CleverPush Subdomain"
-
-#~ msgid "You have to enter your subdomain in the %s to get started."
-#~ msgstr "Du musst deine Subdomain in den %s eingeben, um loszulegen."
+#. URI of the plugin
+#. Author URI of the plugin
+msgid "https://cleverpush.com"
+msgstr "https://cleverpush.com"
